[gd_scene load_steps=13 format=3 uid="uid://dinb37355x3ql"]

[ext_resource type="Script" path="res://scripts/mainCharacter.gd" id="1_ce8oy"]
[ext_resource type="Texture2D" uid="uid://c1ecb1e2pnqgt" path="res://assets/character/capstoneCharacterARM.png" id="2_fdgfn"]
[ext_resource type="Texture2D" uid="uid://bspxdgsmuvsnv" path="res://assets/character/capstoneCharacterALT.png" id="2_qlvv8"]
[ext_resource type="FontFile" uid="uid://bp8shuqwwyqdy" path="res://assets/fonts/Hardpixel-nn51.otf" id="3_q4e8c"]
[ext_resource type="Texture2D" uid="uid://dfik1mh1xlhj1" path="res://assets/ui Elements/label.png" id="3_qpkep"]
[ext_resource type="Texture2D" uid="uid://bulxt058rvmt7" path="res://assets/resources/defaultItem.png" id="4_8x0fq"]
[ext_resource type="PackedScene" uid="uid://bb60ci44x5ewr" path="res://scenes/prefabs/inventory_ui.tscn" id="5_ptw2h"]
[ext_resource type="Script" path="res://scripts/hotbar_ui.gd" id="7_2c4ib"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_73eia"]
size = Vector2(34, 56)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0c2lh"]
radius = 16.0
height = 78.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ui620"]
bg_color = Color(0.156863, 0.156863, 0.156863, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
anti_aliasing_size = 0.2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yceka"]
bg_color = Color(0.145098, 0.709804, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
anti_aliasing_size = 0.161

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_ce8oy")

[node name="PlayerParent" type="Node2D" parent="."]

[node name="LeftArmParent" type="Node2D" parent="PlayerParent"]
texture_filter = 1
position = Vector2(6, -3.5)

[node name="LeftHandParent" type="Node2D" parent="PlayerParent/LeftArmParent"]
position = Vector2(28, 1)

[node name="LeftHandSprite" type="Sprite2D" parent="PlayerParent/LeftArmParent/LeftHandParent"]
z_index = 1
scale = Vector2(2.428, 2.428)

[node name="LeftBarrel" type="Node2D" parent="PlayerParent/LeftArmParent/LeftHandParent"]

[node name="barrel_view" type="Sprite2D" parent="PlayerParent/LeftArmParent/LeftHandParent/LeftBarrel"]
z_index = 4096
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_8x0fq")

[node name="LeftArmSprite" type="Sprite2D" parent="PlayerParent/LeftArmParent"]
position = Vector2(14.5, 1)
scale = Vector2(2.28, 2.28)
texture = ExtResource("2_fdgfn")

[node name="BodySprite" type="Sprite2D" parent="PlayerParent"]
z_index = 2
texture_filter = 1
scale = Vector2(2.428, 2.428)
texture = ExtResource("2_qlvv8")

[node name="RightArmParent" type="Node2D" parent="PlayerParent"]
texture_filter = 1
position = Vector2(-12, -2.5)

[node name="RightHandParent" type="Node2D" parent="PlayerParent/RightArmParent"]
position = Vector2(29, 2)

[node name="RightHandSprite" type="Sprite2D" parent="PlayerParent/RightArmParent/RightHandParent"]
z_index = 2
scale = Vector2(2.428, 2.428)

[node name="RightBarrel" type="Node2D" parent="PlayerParent/RightArmParent/RightHandParent"]

[node name="barrel_view" type="Sprite2D" parent="PlayerParent/RightArmParent/RightHandParent/RightBarrel"]
z_index = 4096
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_8x0fq")

[node name="RightArmSprite" type="Sprite2D" parent="PlayerParent/RightArmParent"]
z_index = 3
position = Vector2(14.5, 2.5)
scale = Vector2(2.428, 2.428)
texture = ExtResource("2_fdgfn")

[node name="InventoryUI" type="CanvasLayer" parent="."]
visible = false

[node name="InventoryRect" type="NinePatchRect" parent="InventoryUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 142.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
texture = ExtResource("3_qpkep")
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7

[node name="Label" type="Label" parent="InventoryUI/InventoryRect"]
layout_mode = 0
offset_left = 11.0
offset_top = 9.5
offset_right = 92.0
offset_bottom = 32.5
theme_override_fonts/font = ExtResource("3_q4e8c")
theme_override_font_sizes/font_size = 20
text = "INVENTORY"

[node name="Inventory_UI" parent="InventoryUI/InventoryRect" instance=ExtResource("5_ptw2h")]
layout_mode = 1

[node name="FpsUI" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="FpsUI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -88.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 75.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 40
text = "FPS
"

[node name="GlobalPosUI" type="CanvasLayer" parent="."]
visible = false

[node name="GlobalPosition" type="Label" parent="GlobalPosUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -65.0
offset_right = 45.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 10
text = "[X,Y]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HotbarUI" type="CanvasLayer" parent="."]

[node name="hotbarRect" type="NinePatchRect" parent="HotbarUI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -80.0
offset_right = 250.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7

[node name="GridContainer" type="GridContainer" parent="HotbarUI/hotbarRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 5.0
offset_right = 9.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
columns = 9
script = ExtResource("7_2c4ib")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_73eia")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CapsuleShape2D_0c2lh")
debug_color = Color(1, 0, 0, 0.419608)

[node name="PlayerInfo" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="PlayerInfo"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.0
offset_top = 220.0
offset_right = 217.0
offset_bottom = 237.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 0
theme_override_styles/background = SubResource("StyleBoxFlat_ui620")
theme_override_styles/fill = SubResource("StyleBoxFlat_yceka")
step = 1.0
value = 100.0
show_percentage = false
